kube/transportation/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: server-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: transportation-server
    template:
        metadata:
            labels:
                component: transportation-server
        spec:
            containers:
                - name: transportation
                  image: bananaforscale/transportation
                  imagePullPolicy: Never
                  ports:
                      - containerPort: 8080
