kube/transportation/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: server-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: transportation-server
    ports:
        - port: 8080
          targetPort: 8080
